tests/rosetta/out/C/arena-storage-pool.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:17Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
typedef struct {
  list_int pool;
  int val;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  list_int pool;
  int val;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_int poolPut(list_int p, int x) {
  int tmp1_data[1];
  list_int tmp1 = {1, tmp1_data};
  tmp1.data[0] = x;
  list_int tmp2 = concat_list_int(p, tmp1);
  return tmp2;
}

int poolGet(list_int p) {
  if (p.len == 0) {
    printf("pool empty\n");
    return (tmp_item_t){.pool = p, .val = 0};
  }
  int idx = p.len - 1;
  int v = p.data[idx];
  list_int tmp3 = slice_list_int(p, 0, idx);
  p = tmp3;
  return (tmp_item1_t){.pool = p, .val = v};
}

list_int clearPool(list_int p) {
  list_int tmp4 = list_int_create(0);
  return tmp4;
}

int main() {
  list_int pool = list_int_create(0);
  int i = 1;
  int j = 2;
  char *tmp5 = _str(i + j);
  printf("%s\n", tmp5);
  list_int tmp6 = list_int_create(0);
  pool = poolPut(tmp6, i);
  list_int tmp7 = list_int_create(0);
  pool = poolPut(tmp7, j);
  i = 0;
  j = 0;
  list_int tmp8 = list_int_create(0);
  int res1 = poolGet(tmp8);
  pool = (list_int)(res1.data["pool"]);
  i = (int)(res1.data["val"]);
  list_int tmp9 = list_int_create(0);
  int res2 = poolGet(tmp9);
  pool = (list_int)(res2.data["pool"]);
  j = (int)(res2.data["val"]);
  i = 4;
  j = 5;
  char *tmp10 = _str(i + j);
  printf("%s\n", tmp10);
  list_int tmp11 = list_int_create(0);
  pool = poolPut(tmp11, i);
  list_int tmp12 = list_int_create(0);
  pool = poolPut(tmp12, j);
  i = 0;
  j = 0;
  list_int tmp13 = list_int_create(0);
  pool = clearPool(tmp13);
  list_int tmp14 = list_int_create(0);
  int res3 = poolGet(tmp14);
  pool = (list_int)(res3.data["pool"]);
  i = (int)(res3.data["val"]);
  list_int tmp15 = list_int_create(0);
  int res4 = poolGet(tmp15);
  pool = (list_int)(res4.data["pool"]);
  j = (int)(res4.data["val"]);
  i = 7;
  j = 8;
  char *tmp16 = _str(i + j);
  printf("%s\n", tmp16);
}

int main() {
  main();
  return 0;
}
